<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_picture_choice_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/dialog_picture_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp">
        <com.example.thomas.mywines.activities.overrides.TextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_title_appellation"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <com.example.thomas.mywines.activities.overrides.MyTextView
            android:id="@+id/appellations_dialog_error_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dialog_error"
            android:text="@string/dialog_add_empty_error"
            android:visibility="gone"/>
    </LinearLayout>

    <com.example.thomas.mywines.activities.overrides.MyEditText
        android:id="@+id/appellations_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:ems="18"
        android:inputType="textCapWords"
        android:hint="@string/appellations_dialog_hint"
        android:textSize="17sp"
        android:textColor="@color/wines_title"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:background="@drawable/dialog_appellation_edit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp">
        <com.example.thomas.mywines.activities.overrides.TextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_add_country"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <com.example.thomas.mywines.activities.overrides.MyTextView
            android:id="@+id/appellations_dialog_error_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/dialog_error"
            android:text="@string/dialog_add_empty_error"
            android:visibility="gone"/>
    </LinearLayout>
    <com.example.thomas.mywines.activities.overrides.MyEditText
        android:id="@+id/appellations_dialog_country"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:padding="5dp"
        android:inputType="textCapWords"
        android:layout_gravity="center_horizontal"
        android:ems="18"
        android:hint="@string/appellations_dialog_hint_country"
        android:textSize="17sp"
        android:textColor="@color/wines_title"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:background="@drawable/dialog_appellation_edit_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            style="@style/dialog_picture_relative_choice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/appellations_dialog_cancel">
            <ImageView
                style="@style/dialog_picture_image_view"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/dialog_picture_gallery_img"
                android:background="@drawable/dialog_picture_cancel_sign"/>
            <com.example.thomas.mywines.activities.overrides.MyTextView
                style="@style/dialog_picture_text_view"
                android:textSize="16sp"
                android:text="@string/dialog_picture_cancel"
                android:layout_toRightOf="@id/dialog_picture_gallery_img"
                android:layout_toEndOf="@id/dialog_picture_gallery_img" />
        </RelativeLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            style="@style/dialog_picture_relative_choice"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/appellations_dialog_confirm">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                style="@style/dialog_picture_image_view"
                android:id="@+id/dialog_picture_camera_img"
                android:background="@drawable/dialog_picture_ok_sign"/>
            <com.example.thomas.mywines.activities.overrides.MyTextView
                style="@style/dialog_picture_text_view"
                android:textSize="16sp"
                android:text="@string/appellations_validate"
                android:layout_toRightOf="@id/dialog_picture_camera_img"
                android:layout_toEndOf="@id/dialog_picture_camera_img" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
